# umnb-tax-rates-police-spending

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  setup.py  utils.c  utils.pyx
cleaning_scripts/: README.md  _budget_expenditures_.py  _budget_revenues_.py  _comparative_data_.py  _policing_providers_.py  _tax_bases_.py  clean_all_data.py
data_analysis/: README.md  cre_analysis.py  elasticity.py  fe_analysis.py  fe_analysis2.py  fe_iv2sls_analysis.py  main.py
data_analysis/cre/: results.pkl  results_indic.pkl  results_inter.pkl  results_rstd.pkl  results_unrstd.pkl  summary.tex  summary.txt  summary_indic.tex  summary_inter.tex  summary_rstd.tex  summary_rstd.txt  summary_unrstd.tex  summary_unrstd.txt
data_analysis/cre_2sls/: data_2sls.xlsx  data_cre_2sls.xlsx  stage1_results.pkl  stage1_summary.tex  stage1_summary.txt  stage2_results.pkl  stage2_summary.tex  stage2_summary.txt
data_analysis/cre_results/: model_summary.txt  model_summary_base.txt  model_summary_base_log.txt  model_summary_disagg_nec.txt  model_summary_disagg_nec_log.txt  model_summary_disagg_nrc.txt  model_summary_disagg_nrc_log.txt  model_summary_indic.txt  model_summary_indic_log.txt  model_summary_inter.txt  model_summary_inter_log.txt  model_summary_rstd_log.txt  model_summary_unrestricted.txt  model_summary_unrestricted_log.txt  model_summary_unrstd_log.txt
data_analysis/elasticity/: elasticity.py  elasticity.xlsx
data_analysis/elasticity_results/: elasticity.xlsx
data_analysis/fe/: results.pkl  summary.tex  summary.txt
data_analysis/fe_2sls/: data_2sls.xlsx  data_fe_2sls.xlsx  stage1_results.pkl  stage1_summary.tex  stage1_summary.txt  stage2_results.pkl  stage2_summary.tex  stage2_summary.txt
data_analysis/fe_2sls_results/: data_2sls.xlsx  model_result.pkl  model_result_log.pkl  model_summary.tex  model_summary.txt  model_summary_log.tex  model_summary_log.txt  s1_result.pkl  s1_summary.tex  s1_summary.txt
data_analysis/fe_iv2sls_results/: model_summary.txt  model_summary_log.txt
data_analysis/fe_results/: model_summary.txt  model_summary_log.txt
data_analysis/fe_results2/: model_summary.txt  model_summary_log.txt
data_analysis/helper_scripts/: README.md  _1_cre_.py  _1_cre_analysis_.py  _2_fe_.py  _2_fe_analysis_.py  _3_fe_2sls_.py  _3_fe_2sls_analysis_.py  _4_elasticity_.py  _cre_analysis_.py  _elasticity_.py  _fe_2sls_analysis_.py  _fe_analysis_.py
data_clean/: GNB2024_pol_prov_clean.xlsx  README.md
data_clean/2000/: GNB2000_bgt_exps_clean.xlsx  GNB2000_bgt_revs_clean.xlsx  GNB2000_cmp_data_clean.xlsx  GNB2000_tax_base_clean.xlsx
data_clean/2001/: GNB2001_bgt_exps_clean.xlsx  GNB2001_bgt_revs_clean.xlsx  GNB2001_cmp_data_clean.xlsx  GNB2001_tax_base_clean.xlsx
data_clean/2002/: GNB2002_bgt_exps_clean.xlsx  GNB2002_bgt_revs_clean.xlsx  GNB2002_cmp_data_clean.xlsx  (+1 more)
data_iv/: README.md  main.py  process_instrument.py
data_pipeline/: README.md  clean_to_final.py  main.py  raw_to_xlsx.py  xlsx_to_clean.py
data_raw/: README.md  convert_to_xlsx.py
data_report/: README.md  compile_pdf.sh  compile_report.sh  data_report.md  figure1.tex  figure2.tex  markdown_to_pdf.sh  references.bib  run_pandoc.sh
data_summary/: README.md  compile_pdf.sh  compile_summary.sh  data_summary.md  data_summary_by_stat.xlsx  data_summary_by_year.xlsx  final_to_summary.py  markdown_to_pdf.sh  references.bib  run_pandoc.sh
data_visualization/: elasticity.py  fe_2sls.py  main.py
data_xlsx/: README.md
findings_results/: findings_results.md
modules/: fastexcel_logging.c  fastexcel_logging.pyx  run_helpers.c  run_helpers.py  run_helpers.pyx
pandoc_config/: affiliations.tex  compile_pdf.sh  filter.lua  meta.yaml
(+414 files in other folders)
