[project]
name = "umnb-tax-rates-police-spending"
description = "An FE regression of New Brunswick tax rates on police spending"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [
    { name = "Luis M. B. Varona", email = "lbvarona@mta.ca" },
    { name = "Otoha Hanatani", email = "ohanatani@mta.ca" },
]
maintainers = [
    { name = "Luis M. B. Varona", email = "lbvarona@mta.ca" },
]
keywords = [
    "fixed-effects regression",
    "econometrics",
    "economic policy",
    "police expenditures",
    "tax rates",
]
dependencies = [
    "fastexcel", # Used by polars' `read_excel` function
    "matplotlib",
    "numpy",
    "polars",
    "seaborn",
    "statsmodels",
    "xlsxwriter",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Luis-Varona/umnb-tax-rates-police-spending"

[project.optional-dependencies]
linting = ["black", "mypy", "ruff"] # For linting and type checking
xlsx_conversion = ["pandas", "xlrd"] # For `data_pipeline/raw_to_xlsx.py`

[tool.mypy]
disable_error_code = ["import-untyped"] # Ignore errors for untyped imports