[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "umnb-tax-rates-police-spending"
description = "An FE-2SLS regression model of New Brunswick tax rates on police spending."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [
    { name = "Luis M. B. Varona", email = "lbvarona@mta.ca" },
    { name = "Otoha Hanatani", email = "ohanatani@mta.ca" },
]
maintainers = [
    { name = "Luis M. B. Varona", email = "lbvarona@mta.ca" },
]
keywords = [
    "econometrics",
    "economic policy",
    "tax rates",
    "fixed-effects",
    "two-stage-least-squares-regression",
]
dependencies = [
    "fastexcel", # Used by polars' `read_excel` function
    "linearmodels",
    "matplotlib",
    "pandas",
    "polars",
    "seaborn",
    "statsmodels",
    "unidecode",
    "xlsxwriter",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Luis-Varona/umnb-tax-rates-police-spending"

[project.optional-dependencies]
linting = ["mypy", "ruff"] # For linting and type checking
xlsx_conversion = ["xlrd"] # For `data_pipeline/raw_to_xlsx.py`

[tool.mypy]
disable_error_code = ["import-untyped"]
